fixing spacing

--- a/styles4.css
+++ b/styles4.css
@@ -622,7 +622,7 @@ img {
     }
 
     .footer-bottom{
-        margin: 5px;
+        margin: 50px 5px 0 5px;
         text-align: center;
     }
 
